# Tentrackule

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  flake.nix  fly.toml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
alert/: Cargo.toml
alert/src/: alert_dispatcher.rs  lib.rs  message_sender.rs
alert/src/lol/: mod.rs
alert/src/tft/: mod.rs
alert/tests/: e2e.rs
bot/: Cargo.toml
bot/src/: alert_dispatcher.rs  alert_sender.rs  commands.rs  handler.rs  lib.rs  message_sender.rs
bot/tests/: e2e.rs
db/: Cargo.toml
db/src/: lib.rs  types.rs
db/src/migrations/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
logs/: tentrackule.log.2025-06-28
result-poller/: Cargo.toml
result-poller/src/: lib.rs  lol.rs  macros.rs  tft.rs
riot-api/: Cargo.toml
riot-api/src/: lib.rs  types.rs
riot-api/src/api/: client.rs  metrics.rs  mod.rs  traits.rs
riot-api/src/api/lol/: league_v4.rs  match_v5.rs  mod.rs
riot-api/src/api/tft/: mod.rs
riot-api/tests/: e2e.rs
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  lol_match.rs  tft_match.rs  traits.rs
src/: config.rs  error.rs  logging.rs  main.rs  result_poller.rs
src/db/: migrations.rs  mod.rs  models.rs  repository.rs  types.rs
src/db/migrations/: mod.rs  v1.rs  v2.rs
src/discord/: alert_sender.rs  bot.rs  commands.rs  handler.rs  image_gen.rs  mod.rs
src/discord/commands/: config.rs  dev.rs  list.rs  mod.rs  track.rs  untrack.rs
src/discord/embeds/: mod.rs
src/poller/: match_poller.rs  mod.rs
src/riot/: client.rs  mod.rs  region.rs  result_poller.rs  types.rs
src/riot/api/: client.rs  metrics.rs
src/riot/api/lol/: league_v4.rs  match_v5.rs  mod.rs
src/riot/endpoints/: account.rs  league.rs  match_v5.rs  mod.rs  summoner.rs
types/: Cargo.toml
types/src/: lib.rs  lol_match.rs  traits.rs
