[package]
name = "Tentrackule"
version = "1.2.0"
authors = ["Loïs Lag <lois@snowcorp.fr>"]
edition = "2024"
readme = "README.md"
license = "MIT"

# See more keys and thair definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-appender = "0.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

tentrackule-riot-api = { path = "./riot-api" }
tentrackule-db = { path = "./db" }
tentrackule-bot = { path = "./bot" }
tentrackule-alert = { path = "./alert" }
tentrackule-shared = { path = "./shared" }
tentrackule-result-poller = { path = "./result-poller" }

[workspace]
members = [
    "riot-api",
    "db",
    "bot",
    "alert",
    "shared",
    "result-poller"
]
