[package]
name = "tentrackule-alert"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

tentrackule-shared = { path = "../shared" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
