[package]
name = "tentrackule-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tracing = "0.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
thiserror = "2"

tentrackule-db = { path = "../db" }
tentrackule-riot-api = { path = "../riot-api" }
tentrackule-alert = { path = "../alert" }
