[package]
name = "tentrackule-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tracing = "0.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"

tentrackule-shared = { path = "../shared" }

[dev-dependencies]
rusqlite = "0.34"
dotenv = "0.15"
serde_json = "1"
