[package]
name = "tentrackule-result-poller"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

tentrackule-shared = { path = "../shared" }
tentrackule-alert = { path = "../alert" }
tentrackule-riot-api = { path = "../riot-api" }
tentrackule-db = { path = "../db" }

