[package]
name = "tentrackule-riot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "2"
tracing = "0.1"
poise = "0.6.1"
governor = "0.10"
nonzero_ext = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
urlencoding = "2.1.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
once_cell = "1"

[dev-dependencies]
dotenv = "0.15"
