[package]
name = "tentrackule-riot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
tracing = "0.1"
governor = "0.10"
nonzero_ext = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
bytes = "1"

tentrackule-shared = { path = "../shared" }

[dev-dependencies]
dotenv = "0.15"
httpmock = "0.7"
tokio = { version = "1.21.2", features = ["test-util", "time"] }
