[package]
name = "tentrackule-shared"
description = "Shared types for Tentrackule components"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
poise = "0.6.1"
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1.3"
async-trait = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"
